Sentiment: Add directions for sentiment analysis.
Signed-off-by: Sarah Sharp <sharp@otter.technology>